fixing right/left aligned figure captions

--- a/_sass/child-theme/components/_figures.scss
+++ b/_sass/child-theme/components/_figures.scss
@@ -10,6 +10,7 @@ figure.align {
 
     flex-direction: column;
     margin: 0 auto;
+    display: table;
     float: none;
 
     @include breakpoint($small) {
